# cars

./: .env  README.md  docker-compose.yml  lint-requirements.txt  openapi.yaml  requirements.txt  setup.cfg  setup.md  test-requirements.txt  tox.ini
backend/app/: .flake8  prestart.sh  pyproject.toml  pytest.ini
backend/app/app/: backend_pre_start.py  main.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: drivers.py  index.py  vehicles.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  base.py  driver.py  vehicle.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: driver.py  vehicle.py
backend/app/app/schemas/: __init__.py  driver.py  vehicle.py
backend/app/app/tests/: conftest.py  test_environment.py  test_utils.py
backend/app/app/tests/api/api_v1/: test_driver_add.py  test_driver_delete.py  test_driver_get_by_id.py  test_driver_update.py  test_drivers_get.py  test_vehicle_add.py  test_vehicle_delete.py  test_vehicle_get_by_id.py  test_vehicle_set_driver.py  test_vehicle_update.py  (+1 more)
backend/app/app/tests/crud/: test_driver_count.py  test_driver_create.py  test_driver_delete.py  test_driver_get.py  test_driver_get_filtered.py  test_driver_get_multi.py  test_driver_update.py  test_vehicle_count.py  test_vehicle_create.py  test_vehicle_delete.py  test_vehicle_get.py  test_vehicle_get_filtered.py  test_vehicle_get_multi.py  test_vehicle_update.py
backend/app/app/tests/utils/: __init__.py  database.py  fill.py  rand.py
(+59 files in other folders)
