[tool.poetry]
name = "app"
version = "0.1.0"
description = "Simple API for Yalantis"
authors = ["Oleksandr <grisov.yalantis@email.from.my.cv>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
fastapi_pagination = "^0.9.1"
aiohttp = "^3.8.0"
requests = "^2.26.0"
tenacity = "^8.0.1"
pydantic = "^1.8.2"
jinja2 = "^3.0.2"
psycopg2-binary = "^2.9.1"
sqlalchemy = "^1.4.26"
pytest = "^6.2.5"
mock = "^4.0.3"
pytest-mock = "^3.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"
isort = "^5.9.3"
autoflake = "^1.4"
flake8 = "^4.0.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
